[package]
name = "rust_todo"
version = "0.1.0"
edition = "2021"
iced = "0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.86"

tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

